--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
-  <title>Followers app</title>
+  <title>Test app</title>
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
